Check if page isn't 404

--- a/BecodeCE/popup.html
+++ b/BecodeCE/popup.html
@@ -1,20 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Becode manager</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <img class="header" src="logo_header.png" alt="Becode, powered by Simplon">
-        
-        <section class="color-1" id="menu">
-				<nav class="cl-effect-1">
-					<a href="https://becode.ryver.com/index.html" target="_blank">Ryver</a>
-					<a href="https://my.becode.org/" target="_blank">my.becode</a>
-					<a href="https://github.com/becodeorg" target="_blank">Github</a>
-					<a href="https://github.com/becodeorg/The-Watch" target="_blank">The watch</a>
-				</nav>
-		</section>
+  <head>
+    <title>Becode manager</title>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <img
+      class="header"
+      src="./logo_header.png"
+      alt="Becode, powered by Simplon"
+    />
 
-    </body>
+    <section class="color-1" id="menu">
+      <nav class="cl-effect-1">
+        <a href="https://becode.ryver.com/index.html" target="_blank">Ryver</a>
+        <a href="https://my.becode.org/" target="_blank">my.becode</a>
+        <a href="https://github.com/becodeorg" target="_blank">Github</a>
+        <a href="https://github.com/becodeorg/The-Watch" target="_blank"
+          >The watch</a
+        >
+      </nav>
+    </section>
+    <p class="error-message">
+      You need to login into Github in order to see The Watch agenda
+    </p>
+    <script src="fetch_github.js"></script>
+  </body>
 </html>
